# Intrusion_detector

database/: Project-db.sql  projectDb-data.sql
video_analyzer/: .gitignore  CMakeLists.txt
video_analyzer/core/: CMakeLists.txt
video_analyzer/core/inc/: ArgumentValidater.hpp  BgSubtractor.hpp  Detector.hpp  HTTP.hpp  VideoProcessor.hpp
video_analyzer/core/src/: ArgumentValidater.cpp  BgSubtractor.cpp  Detector.cpp  HTTP.cpp  VideoProcessor.cpp
video_analyzer/main/: CMakeLists.txt  main.cpp  videoAnalyzer
video_analyzer/resources/: CMakeLists.txt
web/: .angular-cli.json  .gitignore  README.md  gulpfile.ts  package.json  proxy.conf.json  tslint.json
web/client/: .angular-cli.json  package.json  tsconfig.json
web/client/src/: index.html  main.ts  normalize.css  styles.css  theme.css
web/client/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.index.ts  app.module.ts  app.routes.ts  helperURL.ts
web/client/src/app/cameras/: cameras.component.ts  (+7 more)
web/client/src/theme/: theme.less  variables.less
web/server/: app.ts  appResponse.ts  config.ts  package.json  pm2.config.json  secretKey  token.ts  tools.js  toolsUpdateJson.js  tsconfig.json
web/server/controllers/: cameraController.ts  loginController.ts  objectController.ts
web/server/models/: cameras.ts  database.ts  dtobject.ts  insertObject.ts  login.ts  object.ts  responseObject.ts
web/server/routes/: appRoutes.ts
web/server/serverlog/: logger.ts
web/test/: dbConnect.ts  mocha.opts  testCamerasApi.ts  testDetectedApi.ts  testLogin.ts  tsconfig.json
(+43 files in other folders)
